--- a/index.cshtml
+++ b/index.cshtml
@@ -6,7 +6,7 @@ namespace aspnet.config
     {
         public static string ConnectionInfo
         {
-            string name=ConfiguratioManager.AppSettings["ConnectionInfo"];
+            string name=ConfiguratioManager.AppSettings["logfilelocation"];
         }
     }
 }
