--- a/index.cshtml
+++ b/index.cshtml
@@ -1,5 +1,8 @@
 @using System.Configuration
+@{
+    ViewBag.Title = "Home Page";
+}
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    @ConfigurationManager.AppSettings["logfilelocation"]
+    @ConfigurationManager.AppSettings["Environment"]
 </div>
