--- a/index.cshtml
+++ b/index.cshtml
@@ -4,5 +4,6 @@
 }
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    @ConfigurationManager.AppSettings["Environment"]
+    string name = ConfigurationManager.AppSettings["Environment"];
+    <h2>"the value is: " + name</h2>
 </div>
