--- a/index.cshtml
+++ b/index.cshtml
@@ -4,6 +4,6 @@
 }
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    string name = ConfigurationManager.AppSettings["Environment"];
-    <h2>"the value is: " + name</h2>
+    @ConfigurationManager.AppSettings["Environment"]
+    #<h2>"the value is: " + name</h2>
 </div>
