--- a/index.cshtml
+++ b/index.cshtml
@@ -1,4 +1,4 @@
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    @ConfigurationManager.AppSettings["Environment"];
+    """@ConfigurationManager.AppSettings["Environment"]"""
 </div>
