--- a/index.cshtml
+++ b/index.cshtml
@@ -1,3 +1,5 @@
+@using System.Configuration
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
+    @ConfigurationManager.AppSettings["Environment"]
 </div>
