--- a/index.cshtml
+++ b/index.cshtml
@@ -1,4 +1,7 @@
 @using System.Configuration
+@{
+    ViewBag.Title = "Home Page";
+}
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
     @ConfigurationManager.AppSettings["Environment"]
