--- a/index.cshtml
+++ b/index.cshtml
@@ -4,5 +4,6 @@
 }
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    @ConfigurationManager.AppSettings["Environment"]
+    string keyvalue = System.Configuration.ConfigurationManager.AppSettings["keyname"];
+    print ("keyvalue");
 </div>
