--- a/index.cshtml
+++ b/index.cshtml
@@ -4,6 +4,5 @@
 }
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    string keyvalue = System.Configuration.ConfigurationManager.AppSettings["keyname"];
-    print ("keyvalue");
+    @ConfigurationManager.AppSettings["keyname"]
 </div>
