--- a/index.cshtml
+++ b/index.cshtml
@@ -4,5 +4,7 @@
 }
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    @ConfigurationManager.AppSettings["keyname"]
+</div>
+<div class="jumbotron">
+   @ConfigurationManager.AppSettings["Environment"]
 </div>
