--- a/index.cshtml
+++ b/index.cshtml
@@ -4,6 +4,7 @@
 }
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
+    <p>@ConfigurationManager.AppSettings["Environment"]</p>
 </div>
 <div class="jumbotron">
    @ConfigurationManager.AppSettings["Environment"]
