--- a/index.cshtml
+++ b/index.cshtml
@@ -1,6 +1,5 @@
-@using System.Configuration
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
-    <p>@ConfigurationManager.AppSettings["Environment"]</p>
+    <p>@System.Configuration.ConfigurationManager.AppSettings["Environment"]</p>
 </div>
 
