--- a/index.cshtml
+++ b/index.cshtml
@@ -1,4 +1,5 @@
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
+    <p>@System.Configuration.ConfigurationManager.AppSettings["Environment"];
 </div>
 
