--- a/index.cshtml
+++ b/index.cshtml
@@ -1,5 +1,6 @@
 <div class="jumbotron">
     <h1>Testing App Settings</h1>
     <p>@System.Configuration.ConfigurationManager.AppSettings["Environment"]</p>
+    <p>@System.Configuration.ConfigurationManager.AppSettings["variable"]</p>
 </div>
 
